--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# database connection pool max size
+spring.datasource.hikari.maximum-pool-size=2
+
 spring.datasource.url=jdbc:mariadb://mydb.cxv9e37bx0lj.ap-northeast-2.rds.amazonaws.com:3306/prj1
 
 # file size for one file
